--- a/generate-readme/action.yml
+++ b/generate-readme/action.yml
@@ -7,8 +7,11 @@ inputs:
   instructions_path:
     description: 'Path to the instructions markdown file'
     required: true
-  template_uri:
-    description: 'Path to the ARM template file'
+  simple_template_uri:
+    description: 'Path to the simple ARM template file'
+    required: true
+  advanced_template_uri:
+    description: 'Path to the advanced ARM template file'
     required: true
   output_path:
     description: 'Path for output readme markdown file'
